# mirrord

./: CHANGELOG.md  Cargo.toml  index.html  source-files.js
.github/workflows/: ci.yaml
changelog.d/: +concistent-session.internal.md  +copy-replace.internal.md  1189.fixed.md
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
mirrord-agent/: Dockerfile
mirrord-agent/src/: main.rs
mirrord-auth/: Cargo.toml
mirrord-auth/src/: lib.rs  secret.rs
mirrord-cli/src/: config.rs  main.rs
mirrord-config/: Cargo.toml
mirrord-config/src/: feature.rs  lib.rs  pod.rs  preview.rs  util.rs
mirrord-layer/: Cargo.toml
mirrord-layer/src/: config.rs  lib.rs  pod_api.rs
mirrord-preview/: Cargo.toml  README.md
mirrord-preview/src/: client.rs  codec.rs  connection.rs  filter.rs  lib.rs  main.rs  proxy.rs
mirrord/agent/: Cargo.toml  Dockerfile
mirrord/agent/src/: client.rs  error.rs  main.rs  outgoing.rs  runtime.rs  steal.rs
mirrord/agent/src/outgoing/: socket_stream.rs  udp.rs
mirrord/agent/src/steal/: ip_tables.rs
mirrord/agent/src/steal/ip_tables/: mangle.rs  mesh.rs  output.rs
mirrord/auth/: Cargo.toml
mirrord/auth/src/: certificate.rs  credential_store.rs  credentials.rs  error.rs  key_pair.rs  lib.rs  license.rs  prelude.rs
mirrord/cli/: Cargo.toml
mirrord/cli/src/: error.rs  execution.rs  extension.rs  internal_proxy.rs  main.rs  operator.rs  port_forward.rs
mirrord/config/: Cargo.toml
mirrord/config/derive/src/config/: field.rs  flag.rs
mirrord/config/src/: lib.rs  target.rs  util.rs
mirrord/config/src/feature/: copy_target.rs
mirrord/config/src/feature/network/: incoming.rs  outgoing.rs
mirrord/intproxy/protocol/src/: codec.rs  lib.rs
mirrord/intproxy/src/: request_queue.rs
mirrord/intproxy/src/proxies/: outgoing.rs
mirrord/intproxy/src/proxies/outgoing/: net_protocol_ext.rs
mirrord/kube/src/api/: container.rs  kubernetes.rs
mirrord/kube/src/api/kubernetes/: rollout.rs
mirrord/layer/: Cargo.toml
mirrord/layer/src/: common.rs  error.rs  lib.rs  load.rs  proxy_connection.rs  socket.rs
mirrord/layer/src/socket/: ops.rs
mirrord/layer/tests/: issue1458.rs  issue1776.rs  issue1898.rs  issue2283.rs  outgoing.rs  recv_from.rs
mirrord/operator/: Cargo.toml
mirrord/operator/src/: client.rs  crd.rs  error.rs  lib.rs  license.rs  setup.rs
mirrord/operator/src/client/: session.rs
mirrord/operator/src/crd/: policy.rs
mirrord/protocol/: Cargo.toml  build.rs
mirrord/protocol/idl/: tcp.fbs
mirrord/protocol/proto/: error.proto  net.proto  std_types.proto  tcp.proto
mirrord/protocol/src/: codec.rs  features.rs  file.rs  lib.rs  net.rs  outgoing.rs  std_types.rs  tcp.rs  version.rs
mirrord/protocol/src/fbs/: mod.rs  tcp_generated.rs  tcp_generated2.rs
mirrord/protocol/src/outgoing/: tcp.rs
mirrord/protocol/src/proto/: error.rs  mod.rs  net.rs  std_types.rs  tcp.rs
mirrord/protocol/src/tcp/: inner_http_body.rs
mirrord/protocol/src/version/: try_parse.rs
mirrord_agent/: opaque..html
mirrord_agent/outgoing/udp/: static.CALLSITE.html
mirrord_agent/steal/http/v1/: static.META.html
mirrord_kube/api/container/: static.CALLSITE.html
mirrord_layer/: static.CALLSITE.html  static.META.html
mirrord_layer/file/hooks/: static.META.html
mirrord_layer/socket/ops/: static.META.html
mirrord_layer/tcp_steal/: static.CALLSITE.html
mirrord_layer/tcp_steal/http/: opaque..html
mirrord_layer/tcp_steal/http/v1/: opaque..html
tests/: Cargo.toml  app.yaml
tests/python-e2e/: app.py
tests/src/: lib.rs  targetless.rs
