[workspace]
members = [
    "mirrord/*",
    "mirrord/layer/tests/apps/fileops",
    "sample/rust",
    "tests",
    "tests/rust-e2e-fileops",
]

# latest commits on rustls suppress certificate verification
[workspace.package]
version = "3.20.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/metalbear/mirrord"
documentation = "https://mirrord.dev/docs"
authors = ["MetalBear <hi@metalbear.co>"]
description = "Run a local process in the context of a cloud environment"
homepage = "https://mirrord.dev"
publish = false
keywords = ["cli", "backend", "debug", "test", "kubernetes", "cloud", "native", "local", "ide", "devtool", "developer", "tool"]
categories = ["development-tools", "backend", "devtool"]

[workspace.dependencies]
actix-codec = "0.5"
async-trait = "0.1"
bytes = "1"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "net", "macros"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
nix = { version = "0.24", features = ["net"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
thiserror = "1"
k8s-openapi = { version = "0.17", features = ["v1_24"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"]}
kube = { version = "0.78", default-features = false, features = ["runtime", "derive", "client", "ws", "rustls-tls"] }
trust-dns-resolver = { version = "0.22", features = ["serde-config", "tokio-runtime"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
rand = "0.8"
streammap-ext = "0.1"
num-traits = "0.2"
regex = "1"
miette = "5"
fancy-regex = { version = "0.10" }
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = { version = "0.1.0-rc.2" }
libc = "0.2"

# latest commits on rustls suppress certificate verification
# https://github.com/rustls/rustls/pull/1032
# so we patch crates.io to use the latest commits from rustls
# this should be changed once a newer version of rustls is ou
[patch.crates-io]
actix-codec = { git = "https://github.com/actix/actix-net", package = "actix-codec", rev = "d13461b33749ebeee78539f01c8d4931d4433295" }
kube = { git = "https://github.com/DmitryDodzin/kube", package = "kube", rev = "6fb20784135211f5edc5d4b33ea2d2c091062098" }
kube-client = { git = "https://github.com/DmitryDodzin/kube", package = "kube-client", rev = "6fb20784135211f5edc5d4b33ea2d2c091062098" }
kube-runtime = { git = "https://github.com/DmitryDodzin/kube", package = "kube-runtime", rev = "6fb20784135211f5edc5d4b33ea2d2c091062098" }
rustls = { git = "https://github.com/metalbear-co/rustls", branch = "feat-ip-address" }
tracing = { git = "https://github.com/metalbear-co/tracing", package = "tracing", branch = "worker_options_non_blocking_v1" }
tracing-subscriber = { git = "https://github.com/metalbear-co/tracing", package = "tracing-subscriber", branch = "worker_options_non_blocking_v1" }

[patch."https://github.com/ctz/webpki"]
webpki = { git = "https://github.com/metalbear-co/webpki", branch = "feat-ip-address" }

[profile.release]
strip = "debuginfo"
# Enabling LTO causes this issue https://github.com/metalbear-co/mirrord/issues/906
lto = false
