[package]
name = "mirrord-preview"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
bytes.workspace = true
bincode =  { version = "2.0.0-rc.1" }
thiserror.workspace = true
reqwest =  { workspace = true, features = ["stream"] }
tokio.workspace = true
tokio-stream.workspace = true
