[package]
name = "mirrord-preview"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[features]
default = ["client"]
client = ["dep:tokio-stream", "dep:tracing", "dep:async-stream"]

[dependencies]
async-stream = { version = "0.3", optional = true }
bincode =  { version = "2.0.0-rc.1" }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
http = "0.2"
reqwest =  { workspace = true, features = ["stream"] }
tokio.workspace = true
tokio-stream = { workspace = true, optional = true }
