[package]
name = "mirrord-auth"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bcder = "0.7"
bytes = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
x509-certificate = "0.19"

[dev-dependencies]
