[package]
name = "mirrord-auth"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
base64 = "0.21"
bcder = "0.7"
bytes = "1"
chrono = "0.4"
home = "0.5"
pem = "2"
k8s-openapi.workspace = true
kube.workspace = true
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["fs"] }
x509-certificate = "0.19"
